takamaka_examples/src/takamaka/tests/errors/entryonnoncontract/C.java
package takamaka.tests.errors.entryonnoncontract;

import io.takamaka.code.lang.Entry;

public class C {
	public @Entry void m() {}
}